vertical slider css.

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2,10 +2,15 @@
     user-select: none;
 }
 
-body {
-    margin-top: 30px;
+/* Displays range slider vertically */
+input[type=range][orient=vertical]
+{
+    writing-mode: bt-lr; /* IE */
+    -webkit-appearance: slider-vertical; /* WebKit */
+    width: 8px;
+    height: 175px;
+    padding: 0 5px;
 }
-
 
 /* For nearest neighbor scaling */
 /* 
